--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Main.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/Main.xaml
@@ -19,7 +19,7 @@
                                           Command="{Binding ItemSelectedCommand}" />
                             </ListView.Behaviors>
                             <ListView.Header>
-                                <Grid BackgroundColor="#45E87E" Padding="10,25,10,15">
+                                <Grid BackgroundColor="{Binding WarningsBackgroundColor}" Padding="10,25,10,15">
 
                                     <Grid.GestureRecognizers>
                                         <TapGestureRecognizer Command="{Binding ShowWarningsCommand}"></TapGestureRecognizer>
@@ -31,8 +31,8 @@
                                         <RowDefinition Height="Auto"></RowDefinition>
                                     </Grid.RowDefinitions>
 
-                                    <Label Grid.Row="0" Text="{Binding WarningsText}" Style="{DynamicResource TitleStyle}"/>
-                                    <Label Grid.Row="2" Text="Click to view" Style="{DynamicResource SubtitleStyle}"></Label>
+                                    <Label Grid.Row="0" TextColor="{Binding WarningsTextColor}" Text="{Binding WarningsText}" Style="{DynamicResource TitleStyle}"/>
+                                    <Label Grid.Row="2" TextColor="{Binding WarningsTextColor}" Text="Click to view" Style="{DynamicResource SubtitleStyle}"></Label>
                                 </Grid>
                             </ListView.Header>
                             <ListView.ItemTemplate>
