Continued with Home Screen

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainHome.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainHome.xaml
@@ -3,35 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SurvivalBox.Views.MainHome">
-    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-        <Button Text="Add Warning" Command="{Binding AddWarningCommand}" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Accent"></Button>
+             x:Class="SurvivalBox.Views.MainHome"
+             Title="Home">
 
-        <Button Margin="0,15,0,0" Text="{Binding SessionStatus}" Command="{Binding ControlSessionCommand}" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="200" WidthRequest="200" BorderRadius="100"></Button>
-        <Label Text="{Binding SessionInfoLabelBig}" Style="{DynamicResource TitleStyle}" HorizontalTextAlignment="Center"></Label>
-        <Label Text="{Binding SessionInfoLabelSmall}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="Center"></Label>
+    <ScrollView>
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="20,10,20,0">
+            <Button Text="Add Warning" Command="{Binding AddWarningCommand}" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Accent"></Button>
 
-        <Button Margin="0,15,0,0" WidthRequest="125" HeightRequest="50" Text="REQUEST HELP!" BackgroundColor="DarkRed" TextColor="White" Command="{Binding RequestHelpCommand}"></Button>
+            <Grid WidthRequest="200" BackgroundColor="Red" Padding="15,10,15,10" IsVisible="{Binding WarningIsVisible}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
 
-        <ListView HasUnevenRows="True" ItemsSource="{Binding OldSessions}">
-            <ListView.Header>
-                <Label Text="Old Sessions" Style="{DynamicResource TitleStyle}"></Label>
-            </ListView.Header>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Style="{DynamicResource TitleStyle}" TextColor="White" Text="{Binding InfoTitleText}"></Label>
+                <Label Grid.Row="1" Style="{DynamicResource SubtitleStyle}" TextColor="White" Text="{Binding InfoBodyText}"></Label>
+            </Grid>
 
-                            <Label Grid.Column="0" Text="{Binding Name}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="Start"></Label>
-                            <Label Grid.Column="1" Text="{Binding StartDateString}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="End"></Label>
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
+            <Button Margin="0,15,0,0" Text="{Binding SessionStatus}" BackgroundColor="{Binding SessionBackgroundColor}" Command="{Binding ControlSessionCommand}" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="125" WidthRequest="175"></Button>
+            <Label Text="{Binding SessionInfoLabelBig}" Style="{DynamicResource TitleStyle}" HorizontalTextAlignment="Center"></Label>
+            <Label IsVisible="{Binding TimerIsVisible}" Text="{Binding SessionInfoLabelSmall}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="Center"></Label>
+
+            <Button Margin="0,25,0,0" Text="REQUEST HELP!" HorizontalOptions="Center" BackgroundColor="DarkRed" TextColor="White" Command="{Binding RequestHelpCommand}"></Button>
+
+            <ListView HasUnevenRows="True" Margin="0,15,0,0" ItemsSource="{Binding OldSessions}">
+                <ListView.Header>
+                    <Label Text="Old Sessions" Style="{DynamicResource TitleStyle}"></Label>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid Padding="0,10,0,10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+
+                                <Label Grid.Column="0" Text="{Binding Name}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="Start"></Label>
+                                <Label Grid.Column="1" Text="{Binding StartDateString}" Style="{DynamicResource SubtitleStyle}" HorizontalTextAlignment="End"></Label>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </ScrollView>
+
 </ContentPage>
