--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTracker.xaml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Views/MainTracker.xaml
@@ -2,8 +2,31 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
+            xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
             prism:ViewModelLocator.AutowireViewModel="True"
             x:Class="SurvivalBox.Views.MainTracker">
-    <ContentPage Title="Map"></ContentPage>
-    <ContentPage Title="Data"></ContentPage>
+
+    <ContentPage Title="Map">
+        <maps:Map WidthRequest="320" HeightRequest="200"
+                  x:Name="TrackerMap"
+                  IsShowingUser="true"
+                  MapType="Hybrid"
+        />
+    </ContentPage>
+
+    <ContentPage Title="Data">
+        <ListView ItemsSource="GPSData">
+            <ListView.Header>
+                <Label Text="Data" Style="{DynamicResource TitleStyle}"></Label>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="0,5,0,5">
+                        <Label Text="{Binding TimeString}"></Label>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </ContentPage>
+
 </TabbedPage>
